- Switch to MariaDB client (client, bots)

- User avatar is not displayed after login (?) - UserInfoPaneController, L.445
- User avatar remove? Character has avatar, that should be enough
- Error message if login returns an inactive user (still in registration) - EventCommunications, L.141
- User admin pane "active" checkbox
- Send a mail to admins if a new user registered
- If an account has been activated, a character needs to be created
- Clan vs Clan zeigt das Video nach der Lobby nicht an (?)
----------------------------------------------------------------

Version 7.3.6 ( ACHTUNG INKOMPATIBEL BIS USERREG FERTIG
- ADDED: User registration/management in client

Version 7.3.5 (31.02.2023)
- ADDED: Logger into transfer module
- FIXED: Motivational voice samples error fixed

Version 7.3.2 (30.03.2023)
- FIXED: Output of attack info on discord

Version 7.3.0 (29.03.2023)
- UPDATED: Java -> 20
- UPDATED: JavaFX -> 20

Version 7.2.107 (27.03.2023)
- UPDATED: Ulrics announcments of open fights in discord
- FIXED: Language selection for IRC client (Ulric)

Version 7.2.106 (25.03.2023)
- UPDATED: libraries
- ADDED: Integrate Discord bot (bots)
- ADDED: Messages to Discord bot

Version 7.2.102 (24.03.2023)
- ADDED: Show current fight for each user in the user list
- ADDED: Show the information if broken fights were found to user

Version 7.2.101 (24.03.2023)
- UPDATED: libraries
- ADDED: More user information on current user in user list overlay
- CHANGED: Background music is muted whenever a roleplay pane is displayed

Version 7.2.100 (22.03.2023)
- FIXED: Issue with route calculation where sometimes the jumpship needed 2 jumps where only 1 was necessary

Version 7.2.99 (20.03.2023)
- CHANGED: The way the mediaplayer is handled once the video has ended

Version 7.2.97 (18.03.2023)
- ADDED: BG-Video for invasion intro pane
- FIXED: Column name for config values (reserved word as column names caused trouble)
- FIXED: Exception while disconnecting users
