@@ -40,5 +40,6 @@ public enum C3MESSAGES {
 	ERROR_SERVER_OFFLINE,
 	ERROR_DATABASE_OFFLINE,
 	ERROR_SERVER_CONNECTION_LOST,
-	WARNING_BLACKBOX_TEAMS_INVALID;
+	WARNING_BLACKBOX_TEAMS_INVALID,
+	ERROR_USER_IS_IN_REGISTRATION;
 }
