@@ -110,6 +110,7 @@ general_minute=Minute
 general_minutes=Minuten
 general_left_in_round=verbleiben in Runde
 general_and=und
+general_user_is_in_registration=User wurde registriert, ein Admin muss noch freischalten!
 
 AdminSecurityHeadline=Administration
 AdminSecurityTabPrivileges=Rechte
