@@ -110,6 +110,7 @@ general_minute=minute
 general_minutes=minutes
 general_left_in_round=left in round
 general_and=and
+general_user_is_in_registration=User is in registration, an admin needs to confirm the account!
 
 AdminSecurityHeadline=Administration
 AdminSecurityTabPrivileges=Privileges
