@@ -14,14 +14,17 @@ TODO:
 - Switch to MariaDB client (client, bots)
 
 - User avatar is not displayed after login (?) - UserInfoPaneController, L.445
+- User avatar remove? Character has avatar, that should be enough
 - Error message if login returns an inactive user (still in registration) - EventCommunications, L.141
 - User admin pane "active" checkbox
-- Send a mail to admins if a new user registrated
+- Send a mail to admins if a new user registered
+- Send correct password to store in registration process
 - If an account has been activated, a character needs to be created
+- Clan vs Clan zeigt das Video nach der Lobby nicht an (?)
 ----------------------------------------------------------------
 
 Version 7.3.6 ( ACHTUNG INKOMPATIBEL BIS USERREG FERTIG
-- ADDED: User registration in client
+- ADDED: User registration/management in client
 
 Version 7.3.5 (31.02.2023)
 - ADDED: Logger into transfer module
